// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Messaging/Webex Member External Organization 1`] = `
Array [
  <div
    style={
      Object {
        "width": "20rem",
      }
    }
  >
    <div
      className="wxc wxc-member"
    >
      <div
        className="wxc wxc-avatar wxc-member__avatar"
      >
        <div
          className="wxc-avatar__content"
        >
          <svg
            className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
            viewBox="0 0 40 40"
          >
            <text
              x="50%"
              y="50%"
            >
              BS
            </text>
          </svg>
          <img
            alt="avatar"
            className="wxc-avatar__image"
            onError={[Function]}
            src="./images/brandon.png"
          />
        </div>
      </div>
      <div
        className="wxc-member__details"
      >
        <div
          className="wxc-member__name"
        >
          Brandon Seeger
        </div>
        <div
          className="wxc-member__organization"
        >
          Gmail.com
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/Webex Member Space 1`] = `
Array [
  <div
    style={
      Object {
        "width": "20rem",
      }
    }
  >
    <div
      className="wxc wxc-member"
    >
      <div
        className="wxc wxc-avatar wxc-member__avatar"
      >
        <div
          className="wxc-avatar__content"
        >
          <svg
            className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
            viewBox="0 0 40 40"
          >
            <text
              x="50%"
              y="50%"
            >
              BG
            </text>
          </svg>
          <img
            alt="avatar"
            className="wxc-avatar__image"
            onError={[Function]}
            src="./images/barbara.png"
          />
        </div>
      </div>
      <div
        className="wxc-member__details"
      >
        <div
          className="wxc-member__name"
        >
          Barbara German
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/Webex Member Status Enabled 1`] = `
Array [
  <div
    style={
      Object {
        "width": "20rem",
      }
    }
  >
    <div
      className="wxc wxc-member"
    >
      <div
        className="wxc wxc-avatar wxc-member__avatar"
      >
        <div
          className="wxc-avatar__content"
        >
          <svg
            className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
            viewBox="0 0 40 40"
          >
            <text
              x="50%"
              y="50%"
            >
              BG
            </text>
          </svg>
          <img
            alt="avatar"
            className="wxc-avatar__image"
            onError={[Function]}
            src="./images/barbara.png"
          />
          <div
            className="wxc-avatar__status-icon-container"
          >
            <svg
              className="wxc-icon wxc-avatar__status-icon wxc-avatar__status-dnd"
              fill="none"
              height={24}
              style={Object {}}
              viewBox="0 0 32 32"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M16 29.5C23.4558 29.5 29.5 23.4558 29.5 16C29.5 8.54416 23.4558 2.5 16 2.5C8.54416 2.5 2.5 8.54416 2.5 16C2.5 23.4558 8.54416 29.5 16 29.5ZM10 15C9.44772 15 9 15.4477 9 16C9 16.5523 9.44772 17 10 17H22C22.5523 17 23 16.5523 23 16C23 15.4477 22.5523 15 22 15H10Z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="wxc-member__details"
      >
        <div
          className="wxc-member__name"
        >
          Barbara German
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;
